# extraterrestrial

./: .gitignore  CMakeLists.txt  README.md  stdout.txt  watch_for_update.py
code/: AStar.cpp  AStar.hpp  CoSpaceFunctions.cpp  CoSpaceFunctions.hpp  ColorRecognition.cpp  ColorRecognition.hpp  CommonFunctions.cpp  CommonFunctions.hpp  Data.cpp  DebugTools.cpp  DebugTools.hpp  MapData.cpp  MapData.hpp  Navigation.cpp  Navigation.hpp  PPSettings.hpp  Pathfinder.cpp  Pathfinder.hpp  Pathfinding.cpp  Pathfinding.hpp  Point.cpp  Point.hpp  Robot.cpp  Robot.hpp  SFMLWindow.cpp  SFMLWindow.hpp  Speedometer.cpp  Speedometer.hpp  main.cpp  test.cpp
code/libs/: CoSpaceFunctions.cpp  CoSpaceFunctions.hpp  ColorRecognition.cpp  ColorRecognition.hpp  CommonFunctions.cpp  CommonFunctions.hpp  ConsolePainter.cpp  ConsolePainter.hpp  DebugTools.cpp  DebugTools.hpp  PPSettings.hpp  PVector.cpp  PVector.hpp
docs/: Doxyfile
docs/docbook/: _co_space_functions_8cpp.xml  _co_space_functions_8hpp.xml  _co_space_functions_8hpp__dep__incl.dot  _co_space_functions_8hpp__incl.dot  _co_space_functions_8hpp_a452d724e739bd277b7419320c36fc6aa_cgraph.dot  _co_space_functions_8hpp_a452d724e739bd277b7419320c36fc6aa_icgraph.dot  _co_space_functions_8hpp_a769404f2985a027a0d626fedfd4de1e9_cgraph.dot  _color_recognition_8cpp.xml  _color_recognition_8cpp_a22aff79719df69d1e399682521bca3a3_cgraph.dot  _color_recognition_8cpp_ab786948d23021df1eb15cad46d081a64_cgraph.dot  _color_recognition_8cpp_afddf288619ae1066f933dc11363d097c_icgraph.dot  _color_recognition_8hpp.xml  _color_recognition_8hpp__dep__incl.dot  _color_recognition_8hpp_a93131a6a448e02136b19cf788cbc795a_cgraph.dot  _color_recognition_8hpp_ab44bd2d94a55aff5b357fe0a8c1cfa46_cgraph.dot  _common_functions_8cpp.xml  _common_functions_8cpp__incl.dot  _common_functions_8hpp.xml  _common_functions_8hpp_a0400d66d703a2d3ded66efb9a1f99c25_icgraph.dot  _map_data_8cpp.xml  _map_data_8cpp__incl.dot  _map_data_8hpp.xml  _map_data_8hpp__dep__incl.dot  _p_p_settings_8hpp.xml  _p_p_settings_8hpp__dep__incl.dot  _p_vector_8cpp.xml  _p_vector_8cpp__incl.dot  _p_vector_8hpp.xml  _p_vector_8hpp__dep__incl.dot  _pathfinder_8cpp.xml  _pathfinder_8cpp__incl.dot  _pathfinder_8hpp.xml  _pathfinder_8hpp__dep__incl.dot  _pathfinder_8hpp__incl.dot  _robot_8cpp.xml  _robot_8hpp.xml  _robot_8hpp__dep__incl.dot  _robot_8hpp__incl.dot  (+53 more)
map_interpreter/: mapDataCPP  map_interpreter.py
(+663 files in other folders)
